[package]
name = "pipeviewer"
version = "0.1.0"
authors = ["SHA888 <kresnasucandra@gmail.com>"]
edition = "2021"
description = "Exercises for pipeviewer originating from `System Programming with Rust`"
homepage = "https://github.com/SHA888/pipeviewer"
repository = "https://github.com/SHA888/pipeviewer"
readme = "README.md"
keywords = ["Rust", "exercises", "educational"]
categories = ["command-line-utilities"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.22"
crossbeam = "0.8.2"
crossterm = "0.25.0"
